# aria

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.debian  LICENSE  README.md  chainlit.md  chat.template  conftest.py  docker-compose.yml  env.txt  localstack-script.sh  pyproject.toml  requirements.txt  test-prompts.md
.chainlit/: config.toml
.chainlit/translations/: en-US.json
.github/workflows/: ci.yml  release.yml  static.yml
aria/: __init__.py  cli.py  config.py  main.py  run.py  test_api.py
aria/ai/: __init__.py  agents.py  configs.py  kits.py  outputs.py  prompting_guide.md
aria/ai/configs/: __init__.py  chatter.py  prompt_improver.py
aria/api/: endpoints.py
aria/cli/: __main__.py  instructions.py
aria/models/: __init__.py
aria/schemas/: __init__.py
aria/services/: __init__.py
aria/utils/: __init__.py  name_generator.py
aria/webui/: index.html  test.html  test_mermaid.html
aria/webui/css/: components.css  hamburger.css  mermaid.css  style-clean.css  style.css  themes.css
aria/webui/js/: api.js  app.js  chat.js  mermaid_fix.js  nameGenerator.js  sidebar.js  upload.js  utils.js
data/models/: .gitkeep
docs/: 404.md  Gemfile  README.md  _config.yml  advanced.md  compression.md  configuration.md  contributing.md  custom-data-layer-documentation.md  decision-flow.md  deploy-raspberry-pi.md  index.md  installation.md  license.md  llamacpp.md  memory-requirements.md  release-and-deployment.md  run-model.md  startup-guide.md  token-budget-guide.md  tools-inventory.md  usage.md  vision-and-documents.md  web-ui-initialization.md
docs/_includes/: head-custom.html
docs/_layouts/: default.html
docs/_site/: 404.html  advanced.html  configuration.html  contributing.html  index.html  installation.html  license.html  usage.html
docs/env/: .env.12gb.example  .env.16gb.example  .env.24gb.example  .env.32gb.example
dozzle/: users.yml
frontend/: index.html
frontend/css/: components.css  style.css  themes.css
frontend/js/: app.js  chat.js  sidebar.js  utils.js
packaging/: _gui_bootstrap.py  aria-gui.spec  build-appimage.sh
page/: index.html
prisma/migrations/20250108095538_add_tags_to_thread/: migration.sql
public/: custom.css  theme.json
searxng/: settings.yml  uwsgi.ini
src/: commands.py  playground.py  webui.py
src/.chainlit/: config.toml
src/aria/: .env.example  __init__.py  chainlit.md  config.py  initializer.py  llm.py  nvidia.py  preflight.py  ui.py  web_ui.py
src/aria/.chainlit/: config.toml
src/aria/agents/: __init__.py  aria.py  chatter.py  deep_reasoning.py  file_editor.py  guido.py  imdb_expert.py  market_analyst.py  outputs.py  prompt_enhancer.py  python_developer.py  shell_executor.py  socrates.py  spielberg.py  stallman.py  tool_schema.py  utils.py  vl_expert.py  wanderer.py  web_researcher.py  wizard.py  worker.py
src/aria/ax_cli/: __init__.py  app.py
src/aria/cli/: __init__.py  agentbrowser.py  check.py  config.py  dev.py  extras.py  finance.py  finetune.py  http_cmd.py  imdb.py  knowledge.py  lightpanda.py  llamacpp.py  main.py  models.py  processes.py  search.py  self_cmd.py  server.py  system.py  users.py  vision.py  vllm.py  web.py
src/aria/config/: __init__.py  api.py  database.py  folders.py  huggingface.py  models.py  service.py
src/aria/db/: __init__.py  auth.py  layer.py  local_storage_client.py  models.py
src/aria/gui/: __init__.py  mainwindow.ui  stylesheet.py  tray.py  wizard.py
src/aria/helpers/: dotenv.py  memory.py  network.py  nvidia.py  ui.py
src/aria/llm/: __init__.py  _compress.py  _factory.py  _sanitize.py  _state.py  _utils.py
src/aria/public/: custom.css  theme.json
src/aria/scripts/: __init__.py  agentbrowser.py  finetune.py  gguf.py  lightpanda.py  llama.py  vllm.py
src/aria/server/: __init__.py  llama.py  manager.py  process_utils.py  rerank.py  vllm.py
src/aria/tests/: test_calculate_max_safe_context.py  test_nvidia.py  test_nvidia_integration.py  test_path_augmentation.py  test_preflight_extras.py  test_remote_mode.py  test_workflow_state.py
src/aria/tools/: __init__.py  constants.py  database.py  decorators.py  documentation.py  errors.py  models.py  registry.py  retry.py  schemas.py  testing.py  utils.py
src/aria/web/: __init__.py  hooks.py  lifecycle.py  message_pipeline.py  session.py  state.py
src/assistant/: steps.py
src/assistant/agents/: __init__.py  builder.py  configs.py  goals.py  (+6 more)
src/public/: stylesheet.css  theme.json
ui/: Dockerfile  requirements.txt
ui/prisma/: schema.prisma
ui/src/: app.py  comm.py  playground.py
(+243 files in other folders)
