[project]
name = "aria"
version = "0.1.0"
description = "Aria - AI Assistant with web UI, CLI management, and local LLM support"
readme = "README.md"
authors = [
    { name = "Malvavisc0", email = "207609879+malvavisc0@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.9.6",
    "chromadb>=1.5.0",
    "ddgs>=9.10.0",
    "httpx>=0.28.1",
    "huggingface-hub>=1.4.1",
    "imdbinfo>=0.7.0",
    "llama-index>=0.14.14",
    "llama-index-embeddings-openai-like>=0.2.2",
    "llama-index-llms-openrouter>=0.4.4",
    "llama-index-vector-stores-chroma>=0.5.5",
    "loguru>=0.7.3",
    "markitdown>=0.1.4",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
    "typer>=0.24.0",
    "yfinance>=1.2.0",
    "youtube-transcript-api>=1.2.4",
]

[project.optional-dependencies]
# GUI dependencies — required for aria-gui and standalone AppImage/.exe builds
gui = ["pyside6>=6.10.2"]

[project.scripts]
aria = "aria:main"
aria-gui = "aria.gui:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "pyinstaller>=6.19.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.isort]
profile = "black"
line_length = 79

[tool.pytest.ini_options]
asyncio_mode = "auto"
