[project]
name = "aria"
dynamic = ["version"]
description = "Aria - AI Assistant with web UI, CLI management, and local LLM support"
readme = "README.md"
authors = [
    { name = "Malvavisc0", email = "207609879+malvavisc0@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
    "chainlit",
    "chromadb",
    "ddgs",
    "markdownify",
    "httpx",
    "huggingface-hub",
    "imdbinfo",
    "langfuse",
    "llama-index",
    "llama-index-embeddings-openai-like",
    "llama-index-instrumentation",
    "llama-index-llms-openrouter",
    "llama-index-vector-stores-chroma",
    "loguru",
    "markitdown",
    "openinference-instrumentation-llama-index",
    "playwright",
    "pydantic",
    "pillow",
    "pypdfium2",
    "python-dotenv",
    "sqlalchemy",
    "typer",
    "yfinance",
    "youtube-transcript-api",
    "llama-index-embeddings-huggingface",
]

[project.optional-dependencies]
gui = [
    "pyside6",
] # GUI dependencies — required for aria-gui and standalone AppImage/.exe builds
vllm = ["vllm>=0.20.0"]

[project.scripts]
aria = "aria:main"
ax = "aria:main"
aria-gui = "aria.gui:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "aria.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "black",
    "flake8",
    "isort",
    "ruff",
    "pyinstaller",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-xdist",
]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-n logical --dist loadscope --cov=src/aria --cov-report=term-missing"

[tool.coverage.run]
source = ["src/aria"]
branch = true
command_line = "-m pytest"

[tool.coverage.report]
show_missing = true
skip_covered = false
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]

[tool.uv]
link-mode = "copy"
